--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
 }
 
 * {
-	outline: 0;
+	/* outline: 1px solid red; */
 	border: 0;
 	box-sizing: border-box;
 	margin: 0;
@@ -38,4 +38,11 @@ ul {
 ul li {
 	margin: 0;
 	padding: 0;
+}
+
+button {
+	cursor: pointer;
+	border: 0;
+	outline: 0;
+	transition: 0.5s ease-in-out;
 }
