--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
 	--grey4: #f1f1f1;
 	--offwhite: white;
 	/* PADDING  */
-	--padding: 5%;
+	--padding: 10%;
 	--button-padding: 10px 30px;
 	--button-radius: 20px;
 }
@@ -22,6 +22,12 @@
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
+	-ms-overflow-style: none; /* IE and Edge */
+	scrollbar-width: none; /* Firefox */
+}
+
+*::-webkit-scrollbar {
+	display: none;
 }
 
 a {
@@ -45,4 +51,14 @@ button {
 	border: 0;
 	outline: 0;
 	transition: 0.5s ease-in-out;
+}
+
+section {
+	padding: 10%;
+}
+
+@media only screen and (max-width: 768px) {
+	section {
+		padding: 10% 5%;
+	}
 }
