--- a/src/pages/Home/Homepage.css
+++ b/src/pages/Home/Homepage.css
@@ -1,6 +1,5 @@
 /* .... HEROSECTION .... */
 .herosection {
-	padding: var(--padding) 10%;
 	display: flex;
 	justify-content: center;
 	background: var(--black);
@@ -52,7 +51,7 @@
 .btn_cta {
 	width: 90px;
 	color: var(--offwhite);
-	/* animation: MoveDownUp 1s linear infinite; */
+	animation: grow 2s linear infinite;
 }
 
 .btn_cta h5 {
@@ -115,7 +114,6 @@
 
 /* .... OPEN TABS SECTION ....  */
 .openNewTabsSection {
-	padding: 10%;
 	background: var(--primary-color);
 	display: flex;
 	justify-content: center;
@@ -135,7 +133,6 @@
 .title {
 	font-weight: 900;
 	font-size: 3rem;
-	line-height: 60px;
 	color: var(--black);
 }
 
@@ -155,7 +152,7 @@
 .blackArrow_left {
 	width: 120px;
 	color: var(--black);
-	/* animation: MoveDownUp 1s linear infinite; */
+	animation: grow 2s linear infinite;
 }
 
 .blackArrow_left h5 {
@@ -173,7 +170,7 @@
 .blackArrow_right {
 	width: 120px;
 	color: var(--black);
-	/* animation: MoveUpDown 1s linear infinite; */
+	animation: grow 2s linear infinite;
 }
 
 .blackArrow_right h5 {
@@ -186,7 +183,6 @@
 	margin-top: 5px;
 	left: 0;
 	transform: rotate(90deg);
-	/* height: 30px; */
 }
 
 .text {
@@ -195,10 +191,134 @@
 	color: var(--black);
 }
 
-@media only screen and (max-width: 768px) {
-	.herosection {
-		padding: var(--padding);
+@keyframes grow {
+	50% {
+		transform: scale(1.1);
 	}
+	0% {
+		transform: scale(1);
+	}
+	100% {
+		transform: scale(1);
+	}
+}
+
+/* .... STARTUP SECTION .... */
+.startupSection {
+	display: flex;
+	justify-content: center;
+}
+
+.startup_container {
+	display: flex;
+	flex-direction: column;
+	gap: 5rem;
+}
+
+.startup_title h1 {
+	font-weight: 900;
+	font-size: 3rem;
+}
+
+.startup_listContainer {
+	display: flex;
+	flex-direction: column;
+	gap: 3rem;
+	text-align: center;
+}
+
+.startup_listContainer h1 {
+	font-weight: 900;
+	font-size: 3rem;
+}
+
+.startup_list {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 4%;
+	align-item: center;
+	justify-content: space-between;
+}
+
+.startupImg_container {
+	padding: 2rem;
+	background: var(--grey3);
+	overflow: hidden;
+	width: 21%;
+	margin-bottom: 2rem;
+}
+
+.startupImg_container img {
+	border-radius: 5px;
+	width: 100%;
+	height: 50px;
+}
+
+/* .... FINDTREND SECTION PLATFORM ....  */
+.platformSection {
+	background: var(--grey3);
+}
+
+.platformContainer {
+	display: flex;
+	flex-direction: column;
+	gap: 5rem;
+	text-align: center;
+	justify-content: center;
+}
+
+.platforms_list {
+	display: flex;
+	gap: 2rem;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.platformImg_container {
+	padding: 1.5rem;
+	border-radius: 5px;
+	background: var(--offwhite);
+}
+
+.trends {
+	display: flex;
+	flex-direction: column;
+	gap: 2rem;
+	justify-content: center;
+	align-items: center;
+	margin: 0 auto;
+	width: 80%;
+}
+
+.trendsBtn button {
+	background: var(--black);
+	color: var(--offwhite);
+	padding: var(--button-padding);
+	border-radius: var(--button-radius);
+	font-size: 1.2rem;
+	font-weight: 500;
+}
+
+/* .... JOIN US SECTION .... */
+.joinusSection {
+	text-align: center;
+	background: var(--primary-color);
+}
+
+.joinus h1 span {
+	color: var(--green2);
+}
+
+.joinus button {
+	margin-top: 3rem;
+	padding: var(--button-padding);
+	border-radius: var(--button-radius);
+	color: var(--offwhite);
+	font-size: 1.2rem;
+	background: var(--black);
+}
+
+@media only screen and (max-width: 768px) {
 	.herosection_content h1 {
 		font-weight: 900;
 		font-size: 2.5rem;
@@ -219,9 +339,6 @@
 	.herosection_imageContainer img {
 		width: 450px;
 	}
-	.openNewTabsSection {
-		padding: 5%;
-	}
 
 	.newtab_container {
 		gap: 2rem;
@@ -230,8 +347,7 @@
 
 	.title {
 		font-weight: 700;
-		font-size: 2.5rem;
-		line-height: 50px;
+		font-size: 2rem;
 	}
 
 	.demo {
@@ -274,13 +390,70 @@
 		margin-top: 5px;
 		height: 30px;
 	}
+
+	.startup_container {
+		gap: 3rem;
+	}
+
+	.startup_title h1 {
+		font-size: 2.5rem;
+	}
+
+	.startup_listContainer {
+		gap: 2.5rem;
+	}
+
+	.startup_listContainer h1 {
+		font-size: 2rem;
+	}
+
+	.startup_list {
+		gap: 5%;
+	}
+
+	.startupImg_container {
+		padding: 1.5rem;
+		width: 45%;
+	}
+
+	.platformContainer {
+		gap: 3rem;
+	}
+
+	.platforms_list {
+		gap: 2rem;
+		justify-content: flex-start;
+		overflow: scroll;
+	}
+
+	.platformImg_container {
+		padding: 1rem;
+	}
+
+	.platformImg_container img {
+		width: 70px;
+		height: 50px;
+	}
+
+	.trends {
+		gap: 1.5rem;
+	}
+
+	.trends img {
+		width: 100%;
+	}
+
+	.trendsBtn button {
+		font-size: 1rem;
+	}
+
+	.joinus button {
+		margin-top: 2rem;
+		font-size: 1rem;
+	}
 }
 
 @media only screen and (max-width: 480px) {
-	.herosection {
-		padding: var(--padding);
-	}
-
 	.herosection_content h1 {
 		font-size: 2rem;
 	}
@@ -329,6 +502,69 @@
 	.findtrend_imgContainer {
 		padding: 2rem;
 	}
+
+	.startupSection {
+		padding: 5%;
+	}
+	.startup_container {
+		gap: 2rem;
+	}
+
+	.startup_title h1 {
+		font-size: 1.5rem;
+	}
+
+	.startup_listContainer {
+		gap: 2rem;
+	}
+
+	.startup_listContainer h1 {
+		font-size: 1.5rem;
+	}
+
+	.startup_list {
+		grid-template-columns: repeat(2, 47.5%);
+		grid-gap: 3% 5%;
+	}
+
+	.startupImg_container {
+		padding: 1rem;
+	}
+
+	.startupImg_container img {
+		height: 30px;
+	}
+
+	.platformContainer {
+		gap: 1.5rem;
+	}
+
+	.platforms_list {
+		gap: 1rem;
+	}
+
+	.platformImg_container {
+		padding: 0.5rem;
+	}
+
+	.platformImg_container img {
+		width: 50px;
+		height: 30px;
+	}
+
+	.trends {
+		gap: 1rem;
+		width: 100%;
+	}
+
+	.trendsBtn button {
+		font-size: 0.8rem;
+	}
+
+	.joinus button {
+		margin-top: 1.5rem;
+		font-size: 0.8rem;
+	}
 }
 
 @media only screen and (max-width: 360px) {
@@ -356,5 +592,25 @@
 
 	.findtrend_imgContainer {
 		padding: 1.5rem;
+	}
+
+	.startup_title h1 {
+		font-size: 1.2rem;
+	}
+
+	.startup_listContainer {
+		gap: 1.5rem;
+	}
+
+	.startup_listContainer h1 {
+		font-size: 1.2rem;
+	}
+
+	.startupImg_container {
+		padding: 1rem;
+	}
+
+	.startupImg_container img {
+		width: 100px;
 	}
 }
