--- a/src/pages/Home/Homepage.css
+++ b/src/pages/Home/Homepage.css
@@ -299,6 +299,66 @@
 	font-weight: 500;
 }
 
+/* .... DEALS SECTION .... */
+.dealsSection {
+	background: var(--black);
+	display: flex;
+	justify-content: center;
+	align-items: stretch;
+}
+
+.deal_container {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	gap: 2.5rem;
+	text-align: center;
+	align-items: center;
+}
+
+.dealsTitle h1 {
+	color: var(--offwhite);
+	font-size: 4rem;
+	font-weight: 900;
+}
+
+.dealsOption {
+	display: flex;
+	gap: 2rem;
+	justify-content: center;
+	align-items: center;
+	color: var(--offwhite);
+}
+
+.dealsOption p {
+	font-size: 1.5rem;
+	font-weight: 600;
+}
+
+.grey_color {
+	color: var(--grey1);
+}
+
+.ball_container {
+	width: 80px;
+	height: 40px;
+	padding: 5px;
+	background: var(--offwhite);
+	border-radius: 30px;
+	cursor: pointer;
+}
+
+.ball {
+	width: 30px;
+	height: 30px;
+	background: var(--primary-color);
+	border-radius: 50%;
+}
+
+.ball_roll {
+	float: right;
+}
+
 /* .... JOIN US SECTION .... */
 .joinusSection {
 	text-align: center;
@@ -451,6 +511,33 @@
 		margin-top: 2rem;
 		font-size: 1rem;
 	}
+
+	.deal_container {
+		gap: 1.5rem;
+	}
+
+	.dealsTitle h1 {
+		font-size: 3rem;
+	}
+
+	.dealsOption {
+		gap: 1rem;
+	}
+
+	.dealsOption p {
+		font-size: 1.2rem;
+	}
+
+	.ball_container {
+		width: 60px;
+		height: 30px;
+		padding: 5px;
+	}
+
+	.ball {
+		width: 20px;
+		height: 20px;
+	}
 }
 
 @media only screen and (max-width: 480px) {
@@ -564,6 +651,22 @@
 	.joinus button {
 		margin-top: 1.5rem;
 		font-size: 0.8rem;
+	}
+
+	.deal_container {
+		gap: 1rem;
+	}
+
+	.dealsTitle h1 {
+		font-size: 1.5rem;
+	}
+
+	.dealsOption {
+		gap: 0.5rem;
+	}
+
+	.dealsOption p {
+		font-size: 1rem;
 	}
 }
 
